# chat_with_your_data

./: README.md  pyproject.toml
src/: 01_document_loading.ipynb  02_document_splitting.ipynb  03_vectorstores_and_embeddings.ipynb  04_retrieval.ipynb  05_question_answering.ipynb  06_chat.ipynb  app.py
