[tool.poetry]
name = "chat-with-your-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.3.4"
jupyter = "^1.0.0"
pypdf = "^4.1.0"
openai = "^1.14.3"
python-dotenv = "^1.0.1"
langchain = "^0.1.13"
yt-dlp = "^2024.3.10"
pydub = "^0.25.1"
tiktoken = "^0.6.0"
chroma = "^0.2.0"
chromadb = "^0.4.24"
lark = "^1.1.9"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
